--- a/Cards - 3D/Cards 01/Card.html
+++ b/Cards - 3D/Cards 01/Card.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="main-content">
-        <div class="card" id="C1">
+        <div class="card">
             <div class="wrapper">
                 <img class="cover-image" src="Images/dark_rider-cover.jpg" alt="">
             </div>
@@ -19,7 +19,7 @@
     </div>
 
     <div class="main-content">
-        <div class="card" id="C1">
+        <div class="card">
             <div class="wrapper">
                 <img class="cover-image" src="Images/force_mage-cover.jpg" alt="">
             </div>
